--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
     implementation 'androidx.core:core:1.9.0'
     implementation "androidx.viewpager2:viewpager2:1.1.0"
+    implementation 'androidx.activity:activity:1.8.0'
     //implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     //implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     testImplementation 'junit:junit:4.13.2'
