--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
 
 dependencies {
     //val nav_version = "2.7.7"
-
+    //compile 'com.android.support:recyclerview-v7:25.3.1'
+    //compile 'com.android.support:design:25.3.1'
     // Java language implementation
     implementation 'androidx.navigation:navigation-fragment:2.7.7'
     implementation 'androidx.navigation:navigation-ui:2.7.7'
@@ -55,7 +56,7 @@ dependencies {
     // Jetpack Compose Integration
     implementation 'androidx.navigation:navigation-compose:2.7.7'
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    //implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -66,14 +67,14 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
-    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.core:core:1.10.0'
     implementation "androidx.viewpager2:viewpager2:1.1.0"
     implementation 'androidx.activity:activity:1.8.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0")
     //implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     //implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0")
 }
+
