--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+    //id 'com.google.gms.google-services'
 }
 
 android {
@@ -69,11 +71,23 @@ dependencies {
     implementation 'androidx.core:core:1.9.0'
     implementation "androidx.viewpager2:viewpager2:1.1.0"
     implementation 'androidx.activity:activity:1.8.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0")
+
+    implementation platform('io.adapty:adapty-bom:3.3.0')
+    implementation 'io.adapty:android-sdk'
+    implementation 'io.adapty:android-ui'
+
+    // CometChat Push Notification Extension
+    //implementation "com.cometchat:pro-android-chat-sdk:3.0.0"
+    //implementation "com.cometchat:pro-ext-pn:1.0.0"
+
+    // Firebase Messaging
+    implementation "com.google.firebase:firebase-messaging:24.1.0"
+    //implementation "com.google.gms.google-services:1.0"
+
     //implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     //implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0")
 }
