--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,6 @@ plugins {
     id 'com.android.library' version '8.7.3' apply false
     id 'org.jetbrains.kotlin.android' version '2.1.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.23'
+    id 'com.google.gms.google-services' version '4.4.2' apply false
+    //id 'com.google.gms.google-services' version
 }
