--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '2.1.0' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.23'
     id 'com.google.gms.google-services' version '4.4.2' apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
     //id 'com.google.gms.google-services' version
 }
