--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.amplitude:analytics-android:1.20.3'
 }
