--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,13 @@
         android:icon="@drawable/app_icon"
         android:label="Staff Airlines"
         android:roundIcon="@drawable/app_icon"
+        android:enableOnBackInvokedCallback="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.StaffAirlinesKotlin"
         android:usesCleartextTraffic="true"
         tools:replace="android:fullBackupContent"
-        tools:targetApi="31">
+        tools:targetApi="34"
+        tools:ignore="UnusedAttribute">
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
