--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,14 +24,25 @@ android {
         targetSdk 34
         versionCode 43
         versionName "2.0.1"
+        ndk {
+            abiFilters "armeabi-v7a", "x86_64", "arm64-v8a", "x86"
+            debugSymbolLevel 'SYMBOL_TABLE'
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
+        debug {
+            debuggable true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                debugSymbolLevel 'FULL'
+                //debugSymbolLevel 'SYMBOL_TABLE '
+            }
         }
     }
     compileOptions {
@@ -50,21 +61,21 @@ dependencies {
     //val nav_version = "2.7.7"
 
     // Java language implementation
-    implementation 'androidx.navigation:navigation-fragment:2.7.7'
-    implementation 'androidx.navigation:navigation-ui:2.7.7'
+    implementation 'androidx.navigation:navigation-fragment:2.8.9'
+    implementation 'androidx.navigation:navigation-ui:2.8.9'
 
     // Kotlin
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.9'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.9'
 
     // Feature module Support
-    implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.7.7'
+    implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.8.9'
 
     // Testing Navigation
     //androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
 
     // Jetpack Compose Integration
-    implementation 'androidx.navigation:navigation-compose:2.7.7'
+    implementation 'androidx.navigation:navigation-compose:2.8.9'
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -108,4 +119,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.amplitude:analytics-android:1.20.3'
+    implementation 'com.appsflyer:af-android-sdk:6.12.1'
 }
