--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ dependencies {
     //implementation 'com.google.firebase:firebase-auth-common:9.8.0'
     implementation 'com.google.firebase:firebase-auth-ktx:23.2.0'
     implementation 'com.google.android.gms:play-services-maps:19.1.0'
+    implementation 'com.google.android.datatransport:transport-api:3.0.0'
     //implementation "com.google.gms.google-services:1.0"
 
     //implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
