--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-    android:versionCode="47" android:versionName="2.0.1" package="com.stukalov.staffairlines.pro" android:installLocation="auto">
+    android:versionCode="48" android:versionName="2.0.1" package="com.stukalov.staffairlines.pro" android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -34,9 +34,8 @@
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+        <meta-data android:name="com.survicate.surveys.workspaceKey" android:value="34977c427f4e0713cdbf87e3b655f6bc"/>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="YOUR_API_KEY" />
 
         <!--<activity
             android:name=".LoggedInActivity"
