--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         applicationId "com.stukalov.staffairlines.pro"
         minSdk 26
         targetSdk 34
-        versionCode 49
+        versionCode 50
         versionName "2.0.1"
         ndk {
             abiFilters "armeabi-v7a", "x86_64", "arm64-v8a", "x86"
@@ -61,36 +61,36 @@ dependencies {
     //val nav_version = "2.7.7"
 
     // Java language implementation
-    implementation 'androidx.navigation:navigation-fragment:2.8.9'
-    implementation 'androidx.navigation:navigation-ui:2.8.9'
+    implementation 'androidx.navigation:navigation-fragment:2.9.0'
+    implementation 'androidx.navigation:navigation-ui:2.9.0'
 
     // Kotlin
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.9'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.8.9'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.9.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.9.0'
 
     // Feature module Support
-    implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.8.9'
+    implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.9.0'
 
     // Testing Navigation
     //androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
 
     // Jetpack Compose Integration
-    implementation 'androidx.navigation:navigation-compose:2.8.9'
+    implementation 'androidx.navigation:navigation-compose:2.9.0'
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.core:core-ktx:1.16.0'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.9.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.1'
+    implementation 'androidx.preference:preference:1.2.1'
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.fragment:fragment-ktx:1.5.6'
-    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.fragment:fragment-ktx:1.8.8'
+    implementation 'androidx.core:core:1.16.0'
     implementation "androidx.viewpager2:viewpager2:1.1.0"
-    implementation 'androidx.activity:activity:1.8.0'
+    implementation 'androidx.activity:activity:1.10.1'
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0")
 
     implementation platform('io.adapty:adapty-bom:3.8.0')
@@ -106,21 +106,21 @@ dependencies {
     //implementation "com.cometchat:pro-ext-pn:1.0.0"
 
     // Firebase Messaging
-    implementation "com.google.firebase:firebase-messaging:24.1.0"
+    implementation "com.google.firebase:firebase-messaging:24.1.1"
     implementation 'com.google.android.gms:play-services-auth:21.3.0'
     //implementation 'com.google.firebase:firebase-auth-common:9.8.0'
-    implementation 'com.google.firebase:firebase-auth-ktx:23.2.0'
-    implementation 'com.google.android.gms:play-services-maps:19.1.0'
-    implementation 'com.google.android.datatransport:transport-api:3.0.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:23.2.1'
+    implementation 'com.google.android.gms:play-services-maps:19.2.0'
+    implementation 'com.google.android.datatransport:transport-api:4.0.0'
     //implementation "com.google.gms.google-services:1.0"
 
     //implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     //implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'com.amplitude:analytics-android:1.20.3'
     implementation 'com.appsflyer:af-android-sdk:6.12.1'
-    implementation 'com.onesignal:OneSignal:[5.0.0, 5.1.99]'
+    implementation 'com.onesignal:OneSignal:5.1.34'
     implementation("com.survicate:survicate-sdk:6.3.0")
 }
