--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-    android:versionCode="49" android:versionName="2.0.1" package="com.stukalov.staffairlines.pro" android:installLocation="auto">
+    android:versionCode="50" android:versionName="2.0.1" package="com.stukalov.staffairlines.pro" android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove" />
 
     <application
         android:name=".StaffAirlines"
@@ -19,6 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StaffAirlinesKotlin"
         android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
         tools:replace="android:fullBackupContent"
         tools:targetApi="34"
         tools:ignore="UnusedAttribute">
@@ -56,7 +58,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden|adjustPan">
 
             <!--
